# RAG

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt
memory-bank/: .clinerules  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/: __init__.py  config.py  main.py
src/agents/: __init__.py  coordinator.py  fallback.py  web_surfer.py
tests/: test_coordinator.py  test_price_retriever.py  test_web_surfer.py
