[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "price-retriever"
version = "0.1.0"
description = "Internet plan price retrieval system"
requires-python = ">=3.8"
authors = [
    { name = "Development Team" }
]
dependencies = [
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
namespaces = false
